--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "axios": "^0.27.2",
     "discord.js": "^13.3.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "md5": "^2.3.0",
+    "mongodb": "^4.7.0",
+    "mongoose": "^6.4.4",
     "noblox.js": "^4.13.1",
     "quickchart-js": "^3.0.1"
   }
