--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "lockfileVersion": 1,
   "main": "index.js",
   "engines": {
-    "node": "16.13.0"
+    "node": "^16.16.0"
   },
   "discord.js": {
-    "version": "13.3.1"
+    "version": "^13.3.1"
   },
   "dependencies": {
     "axios": "^0.27.2",
